--- a/views/partials/_header.ejs
+++ b/views/partials/_header.ejs
@@ -18,5 +18,20 @@
         <a class="nav-item nav-link" href="/urls/new">Create New URL</a>
       </div>
     </div>
+    <div>
+      
+        <% if(username){ %>
+          <form method="POST" action="/logout">
+          <label>Logged in as: <%= username %></label>
+          <button type="submit" class="btn btn-outline-dark">Logout</button>
+          </form>
+      <% } else{ %>
+        <form method="POST" action="/logins">
+        <input type="text" name="username" placeholder="Username">
+        <button type="submit" class="btn btn-outline-dark">Login</button>
+      </form>
+     <% } %>
+      
+    </div>
   </nav>
 </header>
