--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -22,10 +22,10 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Register a new user</h3>
-      <form class="form-inline" action="/register" method="POST">
+      <h3>Login</h3>
+      <form class="form-inline" action="/login" method="POST">
         <div class="form-group mb-2">
-          <label for="email">Enter a email address:</label>
+          <label for="email">Enter login email address:</label>
           <input
             class="form-control"
             type="email"
@@ -33,7 +33,7 @@
             placeholder="example@email.com"
             style="width: 300px; margin: 1em"
           /><br>
-          <label for="email">Enter a password:</label>
+          <label for="email">Enter login password:</label>
           <input
             class="form-control"
             type="password"
