--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -23,25 +23,24 @@
 
     <main style="margin: 1em;">
       <h3>Login</h3>
-      <form class="form-inline" action="/login" method="POST">
-        <div class="form-group mb-2">
-          <label for="email">Enter login email address:</label>
-          <input
-            class="form-control"
-            type="email"
-            name="email"
-            placeholder="example@email.com"
-            style="width: 300px; margin: 1em"
-          /><br>
-          <label for="email">Enter login password:</label>
-          <input
-            class="form-control"
-            type="password"
-            name="password"
-            style="width: 300px; margin: 1em"
-          />
-          <button type="submit" class="btn btn-primary">Submit</button>
+        <!-- <form class="form-inline" action="/login" method="POST">
+        <label for="email">Enter login email address:</label>
+        <input class="form-control" type="email" name="email" placeholder="example@email.com"style="width: 300px; margin: 1em"/>
+
+        <label for="email">Enter login password:</label>
+        <input class="form-control" type="password" name="password" style="width: 300px; margin: 1em"/>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form> -->
+      <form method="POST" action="/login">
+        <div class="form-group">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" name="email">
         </div>
+        <div class="form-group">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
       </form>
     </main>
     <!-- Bootstrap JS -->
