--- a/views/urls_register.ejs
+++ b/views/urls_register.ejs
@@ -22,29 +22,18 @@
     <%- include('partials/_header') %>
 
     <main style="margin: 1em;">
-      <h3>Register a new user</h3>
-      
-        <div class="form-group mb-2">
-          <form class="form-inline" action="/register" method="POST"></form>
-          <label for="email">Enter a email address:</label>
-          <input
-            class="form-control"
-            type="email"
-            name="email"
-            placeholder="example@email.com"
-            style="width: 300px; margin: 1em"
-          />
-          <label for="email">Enter a password:</label>
-          <input
-            class="form-control"
-            type="password"
-            name="password"
-            style="width: 300px; margin: 1em"
-          />
-          <button type="submit" class="btn btn-primary">Submit</button>
-        </form>
+      <h3>Register New Account</h3>
+      <form method="POST" action="/register">
+        <div class="form-group w-50">
+          <label for="email">Email address</label>
+          <input type="email" class="form-control" aria-describedby="emailHelp" placeholder="Enter email" name="email">
         </div>
-      
+        <div class="form-group w-50">
+          <label for="password">Password</label>
+          <input type="password" class="form-control" name="password" placeholder="Password">
+        </div>
+        <button type="submit" class="btn btn-primary">Submit</button>
+      </form>
     </main>
     <!-- Bootstrap JS -->
     <script
