created hasUserId helper function and updated urls_index rendering

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -30,10 +30,10 @@
           </tr>
         </thead>
         <tbody>
-          <% for (let id in urls) { %>
+          <% for (let id of urls) { %>
             <tr>
-              <td><%= id %></td>
-              <td><%= urls[id] %></td>
+              <td><%= Object.keys(id) %></td>
+              <td><%= Object.values(id) %></td>
               <td><form method="POST" action="/urls/<%= id %>/edit"><button type="submit" class="btn btn-outline-primary">Edit</button></form>
               <td><form method="POST" action="/urls/<%= id %>/delete">
                 <button type="submit" class="btn btn-outline-danger">Delete</button></form><td>
