--- a/views/urls_login.ejs
+++ b/views/urls_login.ejs
@@ -15,7 +15,7 @@
       crossorigin="anonymous"
     />
 
-    <title>New URL - TinyApp Example</title>
+    <title>TinyApp Login</title>
   </head>
 
   <body>
