replaced the post edit route for app.put

--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -35,7 +35,7 @@
             <tr>
               <td><%= id.shortURL %></td>
               <td><%= id.longURL %></td>
-              <td><form method="POST" action="/urls/<%= id.shortURL %>/edit"><button type="submit" class="btn btn-outline-primary">Edit</button></form>
+              <td><form method="POST" action="/urls/<%= id.shortURL %>?_method=PUT"><button type="submit" class="btn btn-outline-primary">Edit</button></form>
               <td><form method="POST" action="/urls/<%= id.shortURL %>?_method=DELETE">
                 <button type="submit" class="btn btn-outline-danger">Delete</button></form><td>
             </tr>
