--- a/views/urls_index.ejs
+++ b/views/urls_index.ejs
@@ -25,6 +25,7 @@
           <tr>
             <th scope="col">Short URL ID</th>
             <th scope="col">Long URL</th>
+            <th scope="col">Visits</th>
             <th scope="col">Edit</th>
             <th scope="col">Delete</th>
           </tr>
@@ -35,6 +36,7 @@
             <tr>
               <td><%= id.shortURL %></td>
               <td><%= id.longURL %></td>
+              <td><%= id.visits %></td>
               <td><form method="POST" action="/urls/<%= id.shortURL %>?_method=PUT"><button type="submit" class="btn btn-outline-primary">Edit</button></form>
               <td><form method="POST" action="/urls/<%= id.shortURL %>?_method=DELETE">
                 <button type="submit" class="btn btn-outline-danger">Delete</button></form><td>
